# crjm

./: .gitignore  README.md  TORNEIO.md  build.ts  package.json
.cursor/: jogosemfalta.md
.github/workflows/: deploy.yml
docs/: QUELHAS-IA.md
src/: App.tsx  index.css  index.html  index.ts
src/components/: CampeonatoPage.tsx  GameCard.tsx  GameLayout.tsx  Header.tsx  PlayerInfo.tsx  RulesPanel.tsx  WinnerAnnouncement.tsx  index.ts
src/games/atari-go/: AtariGoGame.tsx  logic.test.ts  logic.ts  types.ts
src/games/dominorio/: DominorioGame.tsx  logic.test.ts  logic.ts  types.ts
src/games/dominorio/ai/: ai-client.ts  bitboard.test.ts  bitboard.ts  book.json  dominorio.worker.ts  (+2 more)
src/games/gatos-caes/: GatosCaesGame.tsx  logic.test.ts  logic.ts  types.ts
src/games/nex/: NexGame.tsx  logic.test.ts  logic.ts  types.ts
src/games/produto/: ProdutoGame.tsx  logic.test.ts  logic.ts  types.ts
src/games/quelhas/: QuelhasGame.tsx  logic.test.ts  logic.ts  types.ts
src/server/: admin-page.ts  game-adapter.ts  tournament-engine.ts  tournament-server.ts
src/tournament/: GameBoards.tsx  TournamentClient.ts  TournamentClientMock.ts  TournamentWebSocketClient.ts  game-protocol.test.ts  game-protocol.ts  index.ts  protocol.test.ts  protocol.ts
src/types/: index.ts
wasm/dominorio_ai/: Cargo.toml
wasm/dominorio_ai/src/: bitboard.rs  engine.rs  eval.rs  lib.rs  tt.rs  zobrist.rs
wasm/quelhas/: Cargo.toml
wasm/quelhas/quelhas-ai/: Cargo.toml
wasm/quelhas/quelhas-core/: Cargo.toml
wasm/quelhas/quelhas-wasm/: Cargo.toml
wasm/quelhas/quelhas-wasm/src/: lib.rs
(+12 files in other folders)
