[package]
name = "dominorio_ai"
version = "0.1.0"
edition = "2021"
description = "Dominório (Domineering) AI engine for WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"


