[package]
name = "quelhas_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
quelhas-ai = { path = "../quelhas-ai" }
quelhas-core = { path = "../quelhas-core" }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = []
console_error_panic_hook = ["dep:console_error_panic_hook"]

